# Corrected the spacing between institutional signature and banner for IE8+, Firefox, Opera, Safari, and Chrome
git-svn-id: https://svn.ircan.gc.ca/svn/theme-clf2-nsi2@39 27b413b2-b569-4c5a-91b7-c399223a659e

--- a/theme-clf2-nsi2/css/theme-clf2-nsi2-ie6.css
+++ b/theme-clf2-nsi2/css/theme-clf2-nsi2-ie6.css
@@ -18,7 +18,7 @@ body {margin: 0 auto; width: 780px; position: relative;}
 
 #cn-head {float: none; margin-top: -10px; padding-top: 10px;}
 #cn-sig, #cn-wmms{width: 45%;}
-#cn-leaf {background-image: url(../images/lffl.gif);}
+#cn-leaf {background-image: url(../images/lffl.gif); margin-top: 5px;}
 #cn-banner, #cn-banner-eng, #cn-banner-fra {height: 80px;}
 #cn-cmb ul {height: auto; overflow: hidden;}
 #cn-cmb ul li {width: 16.1%; padding-bottom: 1px; margin-bottom: -1px;}
