--- a/theme-clf2-nsi2/css/theme-clf2-nsi2-ie7.css
+++ b/theme-clf2-nsi2/css/theme-clf2-nsi2-ie7.css
@@ -9,6 +9,7 @@ Conditions régissant l'utilisation : http://tbs-sct.ircan.gc.ca/projects/gcwwwt
 #cn-skip-head #cn-sh-link-2 {left: 51%;}
 
 #cn-head {float: none;}
+#cn-leaf {margin-top: 5px;}
 #cn-cmb ul {height: auto; overflow: hidden;}
 #cn-cmb ul li {width: 16.6%;}
 #cn-bcrumb ol {margin: 1px 0 3px 0; clear: left; line-height: 1.25em;}
